[package]
name = "over-under-4067x"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
uom = { version = "0.35.0", default-features = false, features = ["f64", "si"] }
# vex-rt = { git = "https://gitlab.com/professoralex13/vex-rt/", branch = "uom", features = ["uom"] }
vex-rt = { path = "../vex-rt", features = ["uom"] }
# vex-rs-lib = { git = "https://github.com/burnside-robotics/vex-rs-lib/" }
vex-rs-lib = { path = "../vex-rs-lib" }
colorsys = { version = "0.6.7", default-features = false }
